portfolio-app/src/App.scss
$sea-green: #A2D5C6;
$sea-green-darker: #5e7a72;
$button-hover-green: #93c1b3;
$mint-green: #CFFFE2;

h1 {
    margin: 1em 0 1em 10%;
    font-family: "Euphemia UCAS", Arial;
}
h2, h3 {
    font-family: "Euphemia UCAS", Arial;
    font-weight: unset;
}
h2 {
    font-size: 32px;
    font-weight: unset;
}
h3 {
    font-size: 20px;
}
.menu {
    div {
        font-family: "Euphemia UCAS", Arial;
        margin: 1em 0;
        padding-bottom: 0.4em;
        border-bottom: 1px solid rgba($color: $sea-green-darker, $alpha: 1);
    }
    display: flex;
    justify-content: space-around;
    margin-bottom: 2em;
    background-color: rgba($color: $mint-green, $alpha: 0.2);
    padding: 0 7%;
}
.me-card {
    width: 80%;
    margin: 0 auto 2em auto;
    background-image: linear-gradient(to right, rgba($color: $mint-green, $alpha: 0.5), transparent);
    display: flex;
    justify-content: center;
    padding: 2em 3em;
    div {
        display: flex;
        flex-direction: column;
        justify-content: space-around;
        margin-left: 5%;
        margin-right: 5em;
        text-align: right;
        .iris-name {
            font-family: "Euphemia UCAS", Arial;
            font-size: 24px;
        }
    }
    img {
        max-width: 200px;
        -webkit-transform: scaleX(-1);
        transform: scaleX(-1);
        border-radius: 100px;
        width: 60%;
        margin: 0 2em;
        box-shadow: -10px -10px 5px rgba($color: $mint-green, $alpha: 0.5);
    }
}
.qualities {
    display: flex;
    justify-content: space-around;
    color: rgba($color: $sea-green-darker, $alpha: 1);
    width: 80%;
    margin: 2rem auto 2rem auto;
    font-size: 28px;
}
.about-me{
    background-color: rgba($color: $sea-green, $alpha: 0.2);
    padding: 2em 15%;
    margin-bottom: 5em;
    div, p {
        margin: 1em;
    }
    p:first-of-type {
        color: rgba($color: $sea-green-darker, $alpha: 1);
    }
}
.dotted-line {
    border-top: 5px dotted black;
    width: 20%;
    margin: 1em auto;
}
.h2-title {
    text-align: center;
    margin: 3em 0;
}
.office-instructions {
    display: flex;
    width: 78%;
    margin: 1em auto;
    justify-content: space-between;
    align-items: center;
    p {
        color: rgba($color: $sea-green-darker, $alpha: 1);
        margin-right: 0.75em;
    }
}
.project-list {
    background-color: rgba($color: $mint-green, $alpha: 0.2);;
    padding: 2em;
    margin-bottom: 2em;
    .project-list-item {
        margin: 2em 0;
    }
}
.green-button {
    background-color: rgba($color: $sea-green, $alpha: 1);
    padding: 1em;
    border-radius: 5px;
    &:hover {
        background-color: rgba($color: $button-hover-green, $alpha: 0.8);
    }
    p {
        margin: 0;
        color: black;
    }
}

.skills {
    display: grid;
    grid-template-columns: max-content 1fr;
    width: 65%;
    margin: 0 auto 4em auto;
    div {
        padding:  2em 0;
        font-size: 18px;
        &:nth-of-type(2n+1) {
            padding-right: 2em;
        }
        &:nth-of-type(2n) {
            border-left: 1px solid black;
            padding-left: 2em;
        }
    }
}
.contact {
    background-color: rgba($color: $mint-green, $alpha: 0.15);
    margin-top: 4em;
}

.footer {
    background-color: rgba($color: $sea-green, $alpha: 0.3);
    text-align: right;
    padding: 1em 5% 2em 0;
    color: rgba(83, 111, 102, 1);
}

@media only screen and (max-width: 850px) {
    .about-me {
        padding: 1em 10%;
    }
    .qualities {
        font-size: 20px;
    }
    .office-instructions {
        width: 92%;
    }
    .skills {
        width: 80%;
    }
}
@media only screen and (max-width: 720px) {
    .me-card {
        display: block;
        div {
            display: block;
            margin-right: 0em;
        }
        img {
            max-width: 100px;
            margin: 2em auto;
        }
        p {
            text-align: center;
        }
        .iris-name {
            text-align: center;
            font-family: "Euphemia UCAS", Arial;
            font-size: 20px;
        }
    }
    .qualities {
        width: 95%;
        font-size: 14px;
    }
    .skills {
        width: 85%;
        display: block;
        div {
            padding-top: 1em;
            padding-bottom: 1em;
        }
    }

}

